scss/_patterns_lists.scss
@import 'settings';
$list-status-icon-height: 0.875rem; // 14px value from svg as rem so it can be used in calculations
$list-status-icon-nudge: 0.3rem; // 0.3rem seems to be a magic number that positions the icon correctly

@mixin vf-p-list-placeholders {
  %numbered-step-container {
    counter-reset: li;
    display: flex;
    flex-direction: column;
    list-style: none;
    padding-left: 0;
  }

  %numbered-step-title {
    list-style: none;
    margin-left: 0;

    &::before {
      align-self: start;
      background-color: $color-x-light;
      border: 1px solid $color-x-dark;
      border-radius: 100%;
      content: counter(li);
      counter-increment: li;
      direction: rtl;
      display: block;
      font-size: map-get($base-font-sizes, base);
      font-weight: $font-weight-regular-text;
      left: 0;
      position: absolute;
      text-align: center;
    }
  }

  %nested-counter {
    // Counter is named and it will be reset for each "ol" element.
    counter-reset: list-item;
    li::marker {
      // "counters" function returns a string representing the current value of the named counter ("list-item").
      // It is used to insert a string between different levels of nested counters.
      // Source: https://www.w3schools.com/css/css_counters.asp
      content: counters(list-item, '.') '. ';
      counter-increment: list-item;
    }
  }

  // Mixin for list items
  %vf-list-item {
    padding-bottom: $spv--x-small;
    padding-top: $spv--x-small;

    // FIXME: we need a better way to handle forms within lists
    // stylelint-disable selector-max-type
    form & {
      padding-bottom: 0;
      padding-top: 0;

      label {
        margin-bottom: $spv-nudge-compensation;
      }
    }
    // stylelint-enable selector-max-type
  }

  %vf-list-item-state-base {
    @extend %vf-list;
    background-repeat: no-repeat;
    background-size: $list-status-icon-height;
    content: '';
    display: inline-block;
    height: $sph--large;
    margin-right: $sph--large;
    position: relative;
    top: $sph--x-small;
    width: $sph--large;
  }
}

@mixin vf-list-item-divided {
  box-shadow: inset 0px 1px 0px 0rem $color-mid-x-light;
  margin: 0;
  padding-bottom: $sph--large;
  padding-top: $sph--small;
}

// Mixin for inline list items
@mixin vf-inline-list-item {
  display: inline;
  list-style: none;
  margin-right: $sph--large;

  &.last-item,
  &:last-of-type {
    margin-right: 0;
  }
}

@function svg-tick($color) {
  @if type-of($color) != 'color' {
    @warn '#{$color} is not a color.';
    @return false;
  }
  @return url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14'%3E%3Ccircle fill='" + vf-url-friendly-color($color) + "' cx='7' cy='7' r='7'/%3E%3Cpath fill='%23fff' d='M6.1 10.813L2.41 8.105l1.184-1.613L5.9 8.187l4.393-4.394 1.414 1.414z' /%3E%3C/svg%3E");
}

// List styling using list class
@mixin vf-p-list {
  .p-list {
    @extend %vf-clearfix;
    @extend %vf-list;

    &__item {
      @extend %vf-list-item;
    }
  }
}

%vf-list-item-ordered {
  &::marker {
    content: none;
    display: none;
  }

  &::before {
    color: $color-dark;
    content: counters(list-item, '.') '. ';
    display: inline-block;
    margin-right: $sph--large;
    text-align: right;
    width: $sph--large;
  }
}

// A list with separators between items
@mixin vf-p-list-divided {
  .p-list--divided {
    @extend %vf-list;

    .p-list__item {
      @extend %vf-list-item;
      @include vf-list-item-divided;
    }

    &.is-split .p-list__item:last-of-type {
      border-bottom: 1px solid $color-mid-light;
    }

    & & {
      margin-bottom: 0;
      margin-left: $sp-x-large;
      padding-top: $sph--large;

      .p-list__item:last-child {
        padding-bottom: 0;
      }
    }
  }

  // stylelint-disable selector-max-type -- we want to target ordered lists
  ol.p-list--divided {
    list-style: none;
    .p-list__item {
      @extend %vf-list-item-ordered;
    }
  }
  // stylelint-enable selector-max-type -- we want to target ordered lists
}

// Displays item with a state icon
@mixin vf-p-list-item-state {
  .is-ticked {
    &::before {
      @extend %vf-list-item-state-base;
      @include vf-icon-success;
    }
  }

  .is-crossed {
    &::before {
      @extend %vf-list-item-state-base;
      @include vf-icon-error;
    }
  }
}

%vf-list-item-bullet {
  &::before {
    color: $color-dark;
    content: '•';
    display: inline-block;
    margin-right: $sph--large;
    text-align: right;
    width: $sph--large;
  }
}

// Displays item with a bullet
.has-bullet {
  @extend %vf-list-item-bullet;
}

// Displays a list inline with spacing
@mixin vf-p-inline-list {
  .p-inline-list {
    margin-left: 0;
    padding-left: 0;
  }

  .p-inline-list__item {
    @include vf-inline-list-item;
  }
}

// Displays a list inline with items separated by dots
@mixin vf-p-inline-list-middot {
  .p-inline-list--middot {
    margin-left: 0;
    padding-left: 0;

    .p-inline-list__item {
      @include vf-inline-list-item;
      margin-right: $sph--small;
      position: relative;

      &::after {
        content: '\2022';
        line-height: map-get($line-heights, default-text);
        position: relative;
        right: -0.25rem;
      }

      &:last-of-type,
      .last-item {
        &::after {
          content: '';
        }
      }
    }
  }

  // Theming
  @if ($theme-default-p-inline-list--middot == 'dark') {
    .p-inline-list--middot {
      @include vf-p-inline-list-middot-dark-theme;
    }

    .p-inline-list--middot.is-light {
      @include vf-p-inline-list-middot-light-theme;
    }
  } @else {
    .p-inline-list--middot {
      @include vf-p-inline-list-middot-light-theme;
    }

    .p-inline-list--middot.is-dark {
      @include vf-p-inline-list-middot-dark-theme;
    }
  }
}

@mixin vf-p-inline-list-middot-theme($color-list-text) {
  color: $color-list-text;
}
/* ... */

